--- a/talks.qmd
+++ b/talks.qmd
@@ -12,19 +12,19 @@ library(glue)
 library(lubridate)
 talks <- read_csv("talks.csv")
 talks <- talks |>
-  mutate(date = dmy(date)) |>
-  mutate(titlelink = ifelse(is.na(link), title, glue("[{title}]({link})"))) 
+  mutate(titlelink = ifelse(is.na(link), Title, glue("[{title}]({link})"))) 
 talks |>
-  arrange(desc(date)) |>
-  select(date, titlelink, location, details) |>
+  select(Date, titlelink, Event, Location, Details, Author) |>
   gt() |>
     gt::fmt_markdown(columns = titlelink) |>
     cols_label(titlelink = "title") |> 
     gt::cols_width(
-      date ~ px(100),
+      Date ~ px(100),
       titlelink ~ px(400),
-      location ~ px(250),
-      details ~ px(100)) |>
+      Event ~ px(100),
+      Location ~ px(250),
+      Details ~ px(100),
+      Author ~ px(100))  |>
   cols_align("left")
 ```
 
