--- a/education.qmd
+++ b/education.qmd
@@ -6,7 +6,7 @@ title: "Education"
 
 | Year | Degree | Institution |
 |:-----------------------|:-----------------------|:-----------------------|
-| 2019 | Ph.D (Mathematical Statistics) | Stellenbosch University, Stellenbosch, South Africa, SA |
+| 2019 | PhD (Mathematical Statistics) | Stellenbosch University, Stellenbosch, South Africa, SA |
 | 2013 | MSc (Mathematical Statistics) | University of the Freestate, Bloemfontein, South Africa, SA |
 | 2011 | Bsc (hons) (Mathematical Statistics) | University of the Freestate, Bloemfontein, South Africa, SA |
 | 2010 | BSc (Mathematical Statistics) | University of the Freestate, Bloemfontein, South Africa, SA |
@@ -24,6 +24,7 @@ title: "Education"
 
 ## Awards
 
+-   DVC Research and Innovation Excellence Award recipient in the category Early Career Researcher (2025).
 -   Helga and Wolfgang Gaul Stiftung Award (2017). This award is given biannually to a young researcher ($<$ 30 years) with high potential working in the area of Classification, Clustering and related topics. The award is presented by the International Federation of Classification Societies (IFCS).
 -   Crouch Joy Varney-Blackburn award for the best oral presentation in occupational therapy, psychiatry and mental health at the OTASA Congress 2024. Title: The impact of early referral on milestone development of babies with Down Syndrome at the Bloemfontein Child Information Centre. Authors: Dorothy Russell, Olive Khaliq & Johané Nienkemper-Swanepoel.
 -   First prize in the postgraduate oral presentation competition of SASA in 2019. Title: Extended applications of GPAbin biplots.
